# hs-llm-summarizer

./: CHANGELOG.md  LICENSE  README.md  hs-llm-summarizer.cabal
app/: Main.hs
src/: Summarizer.hs
test/: Golden.hs  ImportTest.hs  TypeApplicationTest.hs  TypeOperatorTest.hs
test/golden/expected/: Advanced.txt  AdvancedNoExt.txt  Complex.txt  ComplexImportTest.txt  CustomImportTest.txt  DerivedTypes.txt  NewImportSyntax.txt  PostQualifiedImport.txt  RecordPatterns.txt  Simple.txt
test/golden/input/: Advanced.hs  AdvancedNoExt.hs  Complex.hs  ComplexImportTest.hs  CustomImportTest.hs  DerivedTypes.hs  NewImportSyntax.hs  PostQualifiedImport.hs  RecordPatterns.hs  Simple.hs
